Fetching posts for user

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 #root {
   margin: 0 auto;
   text-align: center;
+  background-color: #7f50e4;
 }
 
 /* General styles for the login form container */
