--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -7,8 +7,17 @@
     animation: animate-in 1s ease-out forwards;
 }
 
+.contact:hover {
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+}
+
+.icon {
+    margin-right: 0.5rem;
+}
+
 .author {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     font-weight: bold;
     color: #543280;
     margin: 0;
@@ -17,10 +26,11 @@
 
 .text {
     white-space: pre-wrap;
-    font-size: 1.25rem;
+    font-size: 0.8rem;
     margin: 0.25rem 0 0 0;
     color: #593884;
-    font-style: italic;
+    display: block;
+    text-align: left;
 }
 
 @keyframes animate-in {
