--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1;
+    z-index: 2;
 }
 
 .modal {
@@ -14,5 +14,9 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     padding: 0;
     overflow: hidden;
-    z-index: 1;
+    z-index: 2;
+    position: fixed;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
 }
