--- a/src/styles/NewContact.module.css
+++ b/src/styles/NewContact.module.css
@@ -25,14 +25,14 @@
 
 .actions {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     gap: 0.5rem;
 }
 
 .actions button {
     cursor: pointer;
     font: inherit;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 1.2rem;
     border: none;
     border-radius: 4px;
     background-color: #34036c;
@@ -41,10 +41,6 @@
 
 .actions button:hover {
     background-color: #23014a;
-}
-
-.actions button[type='button'] {
-    background-color: transparent;
 }
 
 .actions button[type='button']:hover {
