--- a/src/styles/ContactList.module.css
+++ b/src/styles/ContactList.module.css
@@ -11,3 +11,33 @@
     justify-content: center;
     background-color: #7f50e4;
 }
+
+.search {
+    position: relative;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    /* Slightly above the list of contacts */
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    /* Adjust the width as needed */
+    max-width: 500px;
+    /* Limit the maximum width to provide a sleek look */
+    text-align: center;
+    border-radius: 8px;
+    background-color: #f0f0f0;
+    /* Add a background color for a sleek appearance */
+    /* Reduce the padding to make it less tall */
+}
+
+/* Update the styles for the search input */
+input[type="text"] {
+    width: 100%;
+    font-size: 16px;
+    /* Reduce the font size to make it less tall */
+    border: none;
+    border-bottom: 1px solid #ccc;
+    /* Add a bottom border for a sleek input box */
+    border-radius: 4px;
+    transition: border-color 0.2s ease;
+}
